syntax = "proto3";

package pb;

option go_package = "github.com/michael-m-truong/fitness-tracker/pb"; 

//protoc --go_out=paths=source_relative:. --go-grpc_out=paths=source_relative:. ./pb/exercise.proto

message Exercise {
    string name = 1;
    string description = 2;
    string muscle_group = 3;
    int32 user_id = 4;
}

message User {
    string username = 1;
    string password = 2;
}

message NewUser {
    int32 user_id = 1;
    string username = 2;
}

message AccessToken {
    string token = 1;
}

service ExerciseService {
    rpc CreateExercise(Exercise) returns (Exercise);
}

service AuthService {
    rpc Login(User) returns (AccessToken);
    rpc CreateUser(User) returns (NewUser);

    rpc ParseToken(AccessToken) returns (User);
    rpc GenerateToken(User) returns (AccessToken);
}